[gd_scene load_steps=8 format=3 uid="uid://pxnv5a1s7740"]

[ext_resource type="Script" path="res://Scenes/Alchemy/potion_crafting.gd" id="1_75fwf"]
[ext_resource type="Texture2D" uid="uid://dholn7d2gsk7x" path="res://Scenes/Alchemy/Sprites/AlchemyCraftingBackground.jpg" id="1_gyi1u"]
[ext_resource type="Texture2D" uid="uid://bd232amgcg5dx" path="res://Scenes/Alchemy/Sprites/FizzyLight.png" id="2_541ao"]
[ext_resource type="Texture2D" uid="uid://bk30d325f4d1n" path="res://Scenes/Alchemy/Sprites/CraftButtonSprite.png" id="3_ni8q7"]
[ext_resource type="Texture2D" uid="uid://k4ndrrtp88bl" path="res://Scenes/Alchemy/Sprites/BaseSoda.png" id="4_ucr2o"]
[ext_resource type="Texture2D" uid="uid://bqhigb1mqun6d" path="res://Scenes/Alchemy/Sprites/CaffinePowder.png" id="5_4e3ev"]

[sub_resource type="Theme" id="Theme_dtxcm"]
default_font_size = 60

[node name="ScrollContainer" type="ScrollContainer"]
custom_minimum_size = Vector2(1640, 0)
offset_right = 1640.0
offset_bottom = 3023.0
script = ExtResource("1_75fwf")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1640, 3000)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gyi1u")
expand_mode = 3
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="header" type="BoxContainer" parent="Control/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Header" type="Label" parent="Control/GridContainer/header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.301961, 0, 0.121569, 1)
theme_override_colors/font_outline_color = Color(0.729412, 0.729412, 0.729412, 1)
theme_override_constants/outline_size = 30
theme_override_constants/line_spacing = -100
theme_override_font_sizes/font_size = 150
text = "Potion Crafting
----------------------------------"
horizontal_alignment = 1

[node name="SubHeader" type="GridContainer" parent="Control/GridContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/h_separation = 700
columns = 2

[node name="CraftLabel" type="Label" parent="Control/GridContainer/SubHeader"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.192157, 0.00392157, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/font_size = 100
text = "Craft:"

[node name="IngredientsLabel" type="Label" parent="Control/GridContainer/SubHeader"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.337255, 0.192157, 0.00392157, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/font_size = 100
text = "Ingredients:"

[node name="FizzyLight" type="GridContainer" parent="Control/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = -15
columns = 9

[node name="CraftTexture" type="TextureRect" parent="Control/GridContainer/FizzyLight"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("2_541ao")
expand_mode = 2
stretch_mode = 5

[node name="FizzyLightPotion_SB" type="SpinBox" parent="Control/GridContainer/FizzyLight"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 11.54
mouse_filter = 1
theme = SubResource("Theme_dtxcm")
max_value = 999.0
update_on_text_changed = true
prefix = "Amt"

[node name="FizzyLightPotion_BTN" type="TextureButton" parent="Control/GridContainer/FizzyLight"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("3_ni8q7")
ignore_texture_size = true
stretch_mode = 5

[node name="FizzyLightPotion_PB" type="ProgressBar" parent="Control/GridContainer/FizzyLight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.556863, 0.427451, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
max_value = 300.0
step = 1.0

[node name="FizzyLTimer" type="Timer" parent="Control/GridContainer/FizzyLight/FizzyLightPotion_PB"]
unique_name_in_owner = true
wait_time = 300.0

[node name="Ingredient1" type="TextureRect" parent="Control/GridContainer/FizzyLight"]
layout_mode = 2
texture = ExtResource("4_ucr2o")
expand_mode = 3
stretch_mode = 5

[node name="FizzyL_Ing1_LBL" type="Label" parent="Control/GridContainer/FizzyLight/Ingredient1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -69.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Ingredient2" type="TextureRect" parent="Control/GridContainer/FizzyLight"]
layout_mode = 2
texture = ExtResource("5_4e3ev")
expand_mode = 3
stretch_mode = 5

[node name="FizzyL_Ing2_LBL" type="Label" parent="Control/GridContainer/FizzyLight/Ingredient2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -69.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "1"

[connection signal="pressed" from="Control/GridContainer/FizzyLight/FizzyLightPotion_BTN" to="." method="_on_fizzy_light_potion_btn_pressed"]
[connection signal="timeout" from="Control/GridContainer/FizzyLight/FizzyLightPotion_PB/FizzyLTimer" to="." method="_on_fizzy_l_timer_timeout"]
